[FIX] fixed page content height and overflow scroll

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -647,6 +647,7 @@ a {
 }
 
 #page-content {
+  height: calc(100vh - 110px);
   padding: 25px 25px;
   overflow-y: scroll;
   background-color: var(--gray-opaque);
